Fix unclickable divs on iOS

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -302,3 +302,7 @@ body {
   46%  { opacity: 0.8 }
   100% { opacity: 1.0 }
 }
+
+.clickable-ios {
+  cursor: pointer;
+}
